[package]
name = "shuttle-axum"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.9.0", features = ["web-axum"] }
axum = "0.6.1"
sync_wrapper = "0.1.1"
# database
shuttle-shared-db = { version = "0.9.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls","postgres"] }
# json
serde = "1.0"
serde_json = "1.0"
dd-tracing-layer= "0.1.1"
