[package]
name = "shuttle-axum"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shuttle-axum = "0.12.0"
shuttle-runtime = "0.12.0"
tokio = "1.26.0"
axum = "0.6.1"
# database
shuttle-shared-db = { version = "0.12.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls","postgres"] }
# json
serde = "1.0"
serde_json = "1.0"
